DuPont DevSB/src/objects/Stakeholder__c.object
<CustomObject>
    <description>Relates Contacts who are Stakeholders in an eCommerce Project to an eProject record</description>
    <fields>
        <fullName>Accountability__c</fullName>
        <label>Accountability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>If the CONTACT does not exist, first define a new CONTACT by clicking the CONTACT tab.  Reminder: A CONTACT must always be related to an Account.  Note this sequence: find/create Account,m then find/create, relate CONTACT.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>StakeholderRoles</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Core_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>BPO</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>EDI Analyst</fullName>
                </value>
                <value>
                    <fullName>Engagement Leader</fullName>
                </value>
                <value>
                    <fullName>Key User</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Project Leader</fullName>
                </value>
                <value>
                    <fullName>Project Sponsor</fullName>
                </value>
                <value>
                    <fullName>Solutions Designer</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eProject__c</fullName>
        <label>eProject</label>
        <referenceTo>eProject__c</referenceTo>
        <relationshipLabel>Stakeholders</relationshipLabel>
        <relationshipName>Stakeholders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fCompany__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fContact__c</fullName>
        <formula>Contact__r.LastName &amp; &quot;,&quot; &amp;  Contact__r.FirstName</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fInstantMessageID__c</fullName>
        <formula>Contact__r.Instant_Message_ID__c</formula>
        <label>Instant Message ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fLocation__c</fullName>
        <formula>Contact__r.MailingCity &amp; &apos;,&apos; &amp; Contact__r.MailingState &amp; &apos; &apos; &amp; Contact__r.MailingCountry</formula>
        <inlineHelpText>Mailing Address</inlineHelpText>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fPhone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feMail__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>eMail</label>
        <type>Text</type>
    </fields>
    <label>Stakeholder</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>PersonID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholders</pluralLabel>
    <recordTypes>
        <fullName>Stakeholder</fullName>
        <active>true</active>
        <description>Stakeholder Contacts</description>
        <label>Stakeholder</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>